@@ -36,35 +36,36 @@
   - ***** END LICENSE BLOCK ***** -->
 
 <!DOCTYPE bindings SYSTEM "chrome://foxreplace/locale/bindings.dtd">
-<bindings xmlns="http://www.mozilla.org/xbl" xmlns:xul="http://www.mozilla.org/keymaster/gatekeeper/there.is.only.xul">
+<bindings xmlns="http://www.mozilla.org/xbl" xmlns:xul="http://www.mozilla.org/keymaster/gatekeeper/there.is.only.xul"
+          xmlns:html="http://www.w3.org/1999/xhtml">
   <binding id="inputTextBox">
     <resources>
       <script src="chrome://foxreplace/content/defs.js"/>
       <stylesheet src="chrome://foxreplace/skin/bindings.css"/>
     </resources>
     <content onfocus="this.focus();">
-      <xul:hbox flex="1">
-        <xul:hbox class="inputTextBoxSelector" align="center" popup="_child">
-          <xul:image class="inputTextBoxSelectorImage" anonid="selectorImage"/>
-          <xul:image class="inputTextBoxSelectorDropmarker"/>
-          <xul:menupopup position="before_start">
-            <xul:menuitem class="menuitem-iconic inputTextBoxSelectorMenuItem" anonid="itemText" label="&text;"
-                          oncommand="document.getBindingParent(this).inputType=FxRSubstitution.prototype.INPUT_TEXT;"/>
-            <xul:menuitem class="menuitem-iconic inputTextBoxSelectorMenuItem" anonid="itemWholeWords" label="&wholeWords;"
-                          oncommand="document.getBindingParent(this).inputType=FxRSubstitution.prototype.INPUT_WHOLE_WORDS;"/>
-            <xul:menuitem class="menuitem-iconic inputTextBoxSelectorMenuItem" anonid="itemRegExp" label="&regExp;"
-                          oncommand="document.getBindingParent(this).inputType=FxRSubstitution.prototype.INPUT_REG_EXP;"/>
-          </xul:menupopup>
+      <xul:toolbarbutton anonid="button" class="inputTextBoxButton" type="menu">
+        <xul:menupopup inherits="position=menuposition">
+          <xul:menuitem class="menuitem-iconic inputTextBoxSelectorMenuItem" anonid="itemText" label="&text;"
+                        oncommand="document.getBindingParent(this).inputType=FxRSubstitution.prototype.INPUT_TEXT;"/>
+          <xul:menuitem class="menuitem-iconic inputTextBoxSelectorMenuItem" anonid="itemWholeWords" label="&wholeWords;"
+                        oncommand="document.getBindingParent(this).inputType=FxRSubstitution.prototype.INPUT_WHOLE_WORDS;"/>
+          <xul:menuitem class="menuitem-iconic inputTextBoxSelectorMenuItem" anonid="itemRegExp" label="&regExp;"
+                        oncommand="document.getBindingParent(this).inputType=FxRSubstitution.prototype.INPUT_REG_EXP;"/>
+        </xul:menupopup>
+      </xul:toolbarbutton>
+      <xul:vbox pack="center" flex="1">
+        <xul:hbox class="inputTextBoxHBox">
+          <xul:textbox anonid="textBox" class="inputTextBox" flex="1"/>
         </xul:hbox>
-        <xul:textbox class="inputTextBox" anonid="textBox" flex="1"/>
-      </xul:hbox>
+      </xul:vbox>
     </content>
     <implementation>
       <constructor>
         this.inputType = FxRSubstitution.prototype.INPUT_TEXT;
       </constructor>
-      <field name="_selectorImage" readonly="true">
-        document.getAnonymousElementByAttribute(this, "anonid", "selectorImage")
+      <field name="_button" readonly="true">
+        document.getAnonymousElementByAttribute(this, "anonid", "button")
       </field>
       <field name="_textBox" readonly="true">
         document.getAnonymousElementByAttribute(this, "anonid", "textBox")
@@ -80,7 +81,7 @@
             if (val > FxRSubstitution.prototype.INPUT_REG_EXP) val = FxRSubstitution.prototype.INPUT_REG_EXP;
           ]]>
           this._inputType = val;
-          this._selectorImage.setAttribute("inputtype", val);
+          this._button.setAttribute("inputtype", val);
           this._textBox.setAttribute("inputtype", val);
           switch (val) {
             case FxRSubstitution.prototype.INPUT_TEXT: this._textBox.emptyText = "&text;"; break;
